Release 3.4.6 - TBD

Backward compatible changes:

  ZOOKEEPER-442. need a way to remove watches that are no longer of
  interest (Rakesh R, Daniel Gómez Ferro via phunt)

BUGFIXES:

  ZOOKEEPER-2141 ACL cache in DataTree never removes entries (Adam Milne-Smith via camille)

  ZOOKEEPER-2375: Prevent multiple initialization of login object in each
  ZooKeeperSaslClient instance (yuemeng via rakeshr)

  ZOOKEEPER-602: log all exceptions not caught by ZK threads
  (Rakesh R via rgs)

  ZOOKEEPER-1388. Client side 'PathValidation' is missing for the
  multi-transaction api. (Rakesh R via marshallm, phunt)

  ZOOKEEPER-1448: Node+Quota creation in transaction log can crash leader startup (Botond Hejj via fpj)

  ZOOKEEPER-2347: Deadlock shutting down zookeeper
  (Rakesh R via rgs)

  ZOOKEEPER-1474. Cannot build Zookeeper with IBM Java: use of Sun
  MXBean classes (Adalberto Medeiros via phunt)

  ZOOKEEPER-2039. Jute compareBytes incorrect comparison index (Ian Dimayuga via fpj)

  ZOOKEEPER-1901. [JDK8] Sort children for comparison in AsyncOps tests
  (Andrew Purtell via michim)

  ZOOKEEPER-1897. ZK Shell/Cli not processing commands (stack via michim)
  ZOOKEEPER-1596. Zab1_0Test should ensure that the file is closed
  (Enis Soztutar via phunt)

  ZOOKEEPER-1513. "Unreasonable length" exception while starting a
  server (Skye W-M via phunt)

  ZOOKEEPER-753. log4j dependency in the pom needs to have exclusion
  lists (Sean Busbey via phunt)

  ZOOKEEPER-1553. Findbugs configuration is missing some dependencies
  (Sean Busbey via phunt)

  ZOOKEEPER-1478. Small bug in QuorumTest.testFollowersStartAfterLeader( )
  (Alexander Shraer via fpj, breed, phunt)

  ZOOKEEPER-1578. org.apache.zookeeper.server.quorum.Zab1_0Test failed due to
  hard code with 33556 port. (Li Ping via mahadev)

  ZOOKEEPER-1334. Zookeeper 3.4.x is not OSGi compliant - MANIFEST.MF
  is flawed (Claus Ibsen via phunt)

  ZOOKEEPER-1535. ZK Shell/Cli re-executes last command on exit