@@ -5,6 +5,9 @@ Backward compatible changes:
   ZOOKEEPER-442. need a way to remove watches that are no longer of
   interest (Rakesh R, Daniel Gómez Ferro via phunt)
 
+  ZOOKEEPER-1830. Support command line shell for removing watches
+  (Rakesh R via michim)
+
 BUGFIXES:
 
   ZOOKEEPER-2141 ACL cache in DataTree never removes entries (Adam Milne-Smith via camille)
